@@ -24,6 +24,7 @@ endif
 
 check_PROGRAMS     = tc-compile tc-cast tc-deque tc-dir tc-list tc-list2 \
                      tc-map tc-misc tc-option tc-proc tc-rand tc-string tc-time
+tc_cast_CFLAGS     = ${AM_CFLAGS} -std=c99
 tc_cast_LDADD      = libHX.la -lm
 tc_compile_LDADD   = libHX.la
 tc_dir_LDADD       = libHX.la
@@ -42,6 +43,7 @@ if HAVE_CXX
 check_PROGRAMS    += tx-compile tx-cast tx-deque tx-dir tx-list tx-list2 \
                      tx-misc tx-option tx-proc tx-rand tx-string tx-time
 tx_cast_SOURCES    = tx-cast.cpp
+tx_cast_CXXFLAGS   = ${AM_CXXFLAGS} -std=c++98
 tx_cast_LDADD      = libHX.la -lm
 tx_compile_SOURCES = tx-compile.cpp
 tx_compile_LDADD   = libHX.la
