@@ -5,6 +5,7 @@ HEAD
 Fixes:
 - Added missing __cplusplus guards to libHX/io.h
 - Added missing includes to libHX/string.h
+- Use __typeof__ in includes
 Changes:
 - For filesystem/filehandle-related functions, io.h should now be included
   in userspace programs instead of misc.h
